portfolio/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');


.container{
  margin: 0px;
	padding: 0px;
	box-sizing: border-box;
	font-family: 'Staatliches', cursive;
	max-width: 100%;
	overflow-x: hidden;
  background-color: #222222;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.App {
  width: 70w;
  height: 100vh;
  border-radius: 10px;
  margin-top: 2vh;
  background-color: white;
  
}


.three {
  background-color: white;
  display: flex;
  padding: 20px;
  color: white;
  border-radius: 10px;


  width: 70vw;
  height: 20vw;
  margin-top: 0px;
}

.nav ul{
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style-type: none;
  justify-content: space-around;
  margin: 0;
  padding: 0;

}

.nav li{
  font-size: 24px;
  color: #CC9DC2;
  border-radius: 10px;
  border-width: 2.5px;
  border-style: solid;
  border-color: #7493DE;  
  width: 160px;
  display: flex;
  justify-content: center;
}

.nav a{
 
  color:#CC9DC2;
  text-decoration: none;
  padding: 5px;
 
}

.nav a:hover{
  color: #7493DE;
}


.content{
  background-color: white;
  width: 100%;
  height: 100%;
  border-top-right-radius : 100px;
  border-top-left-radius : 100px;
  margin-top: 20px;
  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem, rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
}

